Synchronize Danish translation with upstream

--- a/translations/da.json
+++ b/translations/da.json
@@ -139,8 +139,8 @@
     "both": "Begge",
     "saved": "Gemt",
     "unsubscribe": "Afmeld abbonement",
-    "subscribe": "Abboner",
-    "subscribed": "Abbonerede",
+    "subscribe": "Abonnér",
+    "subscribed": "Abonnerer",
     "prev": "Forrige",
     "next": "Næste",
     "sidebar": "Sidebar",
@@ -291,22 +291,22 @@
     "federation_enabled": "Forbund aktiveret",
     "federation_debug": "Forbund debug-tilstand",
     "applicant": "Ansøger",
-    "per_second": "Per sekund",
+    "per_second": "Per Sekund",
     "column_category": "Kategori",
     "loading": "Indlæser",
     "couldnt_mark_post_as_read": "Kunne ikke markere indlæg som læst.",
     "parent_comment_not_in_post": "Kommentarens forælder tilhører et andet indlæg.",
     "remove_content": "Slet indhold",
     "remove_content_more": "Slet indlæg, kommentarer og fællesskaber",
-    "rate_limit_image": "Billede sendegrænse",
-    "rate_limit_comment": "Kommentar sendegrænse",
-    "rate_limit_search": "Søg sendegrænse",
+    "rate_limit_image": "Billede",
+    "rate_limit_comment": "Kommentar",
+    "rate_limit_search": "Søg",
     "featured": "Fastgjort",
     "feature_in_local": "Fastgør lokalt",
     "hard": "Svær",
-    "rate_limit_message": "Besked sendegrænse",
-    "rate_limit_post": "Indlæg sendegrænse",
-    "rate_limit_register": "Oprettelse sendegrænse",
+    "rate_limit_message": "Besked",
+    "rate_limit_post": "Indlæg",
+    "rate_limit_register": "Oprettelse",
     "add_tagline": "Tilføj underrubrik",
     "custom_emoji_save_validation": "Alle felter skal udfyldes og koden kan ikke duplikeres.",
     "add_custom_emoji": "Tilføj brugerdefineret emoji",
@@ -476,5 +476,17 @@
     "column_alttext": "Alternativ tekst",
     "column_imageurl": "Billede URL",
     "column_shortcode": "Kode",
-    "missing_totp_token": "TOTP token mangler"
+    "missing_totp_token": "TOTP token mangler",
+    "error_page_title": "Fejl!",
+    "error_page_paragraph": "Der skete en fejl på serveren. Prøv at genindlæse siden eller vend tilbage på et senere tidspunkt. Hvis problemet fortsætter, kan du søge hjælp i <1>Lemmys supportfællesskab</1> eller <1>Lemmys Matrixchatrum</1>.",
+    "error_page_admin_matrix": "Hvis du har brug for hjælp fra en af administratorne på {{instance}}, så prøv følgende Matrixadresser:",
+    "error_code_message": "Serveren gav denne fejl: <1>{{error}}</1>. Fejlen kan være nyttig for administratorer eller udviklerer for at diagnosticere og rette fejlen",
+    "not_found_page_title": "Siden Findes Ikke",
+    "not_found_page_message": "Siden du leder efter findes ikke.",
+    "not_found_return_home_button": "Klik her for at vende tilbage til forsiden",
+    "language_select_placeholder": "Vælg sprog",
+    "rate_limit": "Sendegrænse",
+    "rate_limit_header": "Sendegrænseindstillinger",
+    "software": "Software",
+    "version": "Version"
 }
