--- a/translations/pl.json
+++ b/translations/pl.json
@@ -480,7 +480,7 @@
     "error_page_paragraph": "Wystąpił błąd po stronie serwera. Spróbuj odświeżyć swoją przeglądarkę. Jeżeli to nie pomogło, wróć do nas później. Jeżeli problem się utrzymuje, spróbuj zapytać o pomoc w <1>społeczności wsparcia Lemmy</1> lub na <1>Matrixowym kanale dot. Lemmy</1>.",
     "error_code_message": "Serwer zwrócił błąd: <1>{{error}}</1>. Treść błędu może być przydatna dla administratorów i deweloperów, by zdiagnozować problem",
     "slur_filter_regex": "Regexowy filtr przekleństw",
-    "community_not_logged_in_alert": "Nie jesteś zalogowany/zalogowana. Możesz jednak zasubskrybować to konto z innego konta w Fediverse, przykładowo z Lemmy lub Mastodona. By to zrobić, wklej następujący ciąg znaków w wyszukiwarkę na swojej instancji !{{community}}@{{instance}}",
+    "community_not_logged_in_alert": "Nie jesteś zalogowany/zalogowana. Możesz jednak zasubskrybować to konto z innego konta w Fediverse, przykładowo z Lemmy lub Mastodona. By to zrobić, wklej następujący ciąg znaków w wyszukiwarkę na swojej instancji <1>!{{community}}@{{instance}}</1>",
     "not_top_admin": "Nie jest pierwszym administratorem.",
     "error_page_title": "Błąd!",
     "error_page_admin_matrix": "Jeżeli chcesz się skontaktować z administratorami {{instance}}, spróbuj pod poniższym adresem Matrixowym:",
