add top hour words in english

--- a/translations/en.json
+++ b/translations/en.json
@@ -184,6 +184,9 @@
   "strong": "Strong",
   "new": "New",
   "old": "Old",
+  "top_hour": "Top Hour",
+  "top_six_hours": "Top Six Hours",
+  "top_twelve_hours": "Top Twelve Hours",
   "top_day": "Top Day",
   "top_week": "Top Week",
   "top_month": "Top Month",
