Add fields for site creation and update validation

--- a/translations/en.json
+++ b/translations/en.json
@@ -345,6 +345,8 @@
   "not_a_moderator": "Not a moderator.",
   "not_a_mod_or_admin": "Not a moderator or admin.",
   "site_already_exists": "Site already exists.",
+  "site_name_required": "Site name required.",
+  "site_name_length_overflow": "Site name cannot exceed 20 characters",
   "site_description_length_overflow": "Site description cannot exceed 150 characters.",
   "couldnt_update_site": "Couldn't update site.",
   "couldnt_find_that_username_or_email": "Couldn't find that username or email.",
@@ -437,6 +439,8 @@
   "legal_information": "Legal",
   "hide_modlog_mod_names": "Hide modlog mod names",
   "slur_filter_regex": "Slur filter regex",
+  "invalid_regex": "Invalid regular expression.",
+  "permissive_regex": "Regular expression would match any provided text.",
   "actor_name_max_length": "Max actor name length",
   "federation_enabled": "Federation enabled",
   "federation_debug": "Federation debug mode",
