feat: Capitalize 'Lock' and 'Delete'

--- a/translations/en.json
+++ b/translations/en.json
@@ -64,7 +64,7 @@
   "view_source": "view source",
   "view_all_comments": "View all comments",
   "unlock": "unlock",
-  "lock": "lock",
+  "lock": "Lock",
   "sticky": "sticky",
   "unsticky": "unsticky",
   "link": "link",
@@ -113,7 +113,7 @@
   "reason": "Reason",
   "mark_as_read": "mark as read",
   "mark_as_unread": "mark as unread",
-  "delete": "delete",
+  "delete": "Delete",
   "deleted": "deleted by creator",
   "delete_account": "Delete Account",
   "delete_account_confirm": "Warning: this will permanently delete all of your data from this instance. Your data may not be deleted on other, existing instances. Enter your password to confirm.",
