add reset_password string (#67)

--- a/translations/en.json
+++ b/translations/en.json
@@ -404,6 +404,7 @@
   "reports": "Reports",
   "reporter": "Reporter",
   "resolved_by": "Resolved by <1></1>",
+  "reset_password": "Reset Password",
   "unresolved_by": "Unresolved by <1></1>",
   "show_report_dialog": "Show Report Dialog",
   "create_report": "Create Report",
