Add top months words in english

--- a/translations/en.json
+++ b/translations/en.json
@@ -190,6 +190,9 @@
   "top_day": "Top Day",
   "top_week": "Top Week",
   "top_month": "Top Month",
+  "top_three_months": "Top Three Months",
+  "top_six_months": "Top Six Months",
+  "top_nine_months": "Top Nine Months",
   "top_year": "Top Year",
   "top_all": "Top All Time",
   "most_comments": "Most Comments",
