--- a/translations/en.json
+++ b/translations/en.json
@@ -488,5 +488,6 @@
   "remove_two_factor": "Remove 2-factor authentication",
   "two_factor_token": "2FA Token",
   "jump_to_content": "Jump to content",
-  "cant_enable_private_instance_and_federation_together": "Can't enable private instance and federation together"
+  "cant_enable_private_instance_and_federation_together": "Can't enable private instance and federation together",
+  "op": "OP"
 }
