--- a/translations/en.json
+++ b/translations/en.json
@@ -272,6 +272,7 @@
   "language_select_placeholder": "Select language",
   "undetermined_language_warning": "Warning: If you deselect Undetermined, you will not see most content.",
   "browser_default": "Browser Default",
+  "browser_default_compact": "Browser Default Compact",
   "downvotes_disabled": "Downvotes disabled",
   "enable_downvotes": "Enable Downvotes",
   "upvote": "Upvote",
