--- a/translations/en.json
+++ b/translations/en.json
@@ -514,5 +514,6 @@
   "couldnt_create_audio_captcha": "Couldn't create audio captcha.",
   "incorrect_login": "Incorrect login credentials",
   "show_password": "Show Password",
-  "hide_password": "Hide Password"
+  "hide_password": "Hide Password",
+  "controversial": "Controversial"
 }
