--- a/translations/el.json
+++ b/translations/el.json
@@ -514,5 +514,6 @@
     "hide_password": "Κρύψε κωδικό πρόσβασης",
     "show_password": "Εμφάνισε κωδικό πρόσβασης",
     "browser_default_compact": "Ελαφριά προεπιλογή προγράμματος περιήγησης",
-    "incorrect_login": "Λανθασμένα στοιχεία λογαριασμού"
+    "incorrect_login": "Λανθασμένα στοιχεία λογαριασμού",
+    "controversial": "Αμφιλεγόμενα" 
 }
