--- a/translations/en.json
+++ b/translations/en.json
@@ -515,5 +515,12 @@
   "incorrect_login": "Incorrect login credentials",
   "show_password": "Show Password",
   "hide_password": "Hide Password",
-  "controversial": "Controversial"
+  "controversial": "Controversial",
+  "remote_follow_prompt": "Enter the instance you would like to follow this community from",
+  "fetch_community": "Fetch Community",
+  "community_federated": "Community Federated!",
+  "fetching_community": "Fetching {{community}}",
+  "could_not_fetch_community": "Could not fetch {{community}}",
+  "remote_follow": "Remote Follow",
+  "remote_follow_modal_title": "Subscribe from Remote Instance"
 }
