feat: Update 2FA related translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -499,14 +499,15 @@
   "site": "Site",
   "software": "Software",
   "version": "Version",
-  "missing_totp_token": "TOTP token is missing",
-  "incorrect_totp_token": "Incorrect TOTP token",
-  "set_up_two_factor": "Set up 2-factor authentication",
-  "enter_two_factor_code": "Enter your 2FA code",
-  "two_factor_link": "2FA installation link",
-  "two_factor_setup_instructions": "Click 'Save', then manually reload this page, scroll down and use the '2FA installation link' to obtain the oauth URL for your authenticator.",
-  "remove_two_factor": "Remove 2-factor authentication",
-  "two_factor_token": "2FA Token",
+  "incorrect_2fa_code": "Incorrect 2FA code",
+  "enable_2fa": "Enable 2-factor authentication",
+  "enter_2fa_code": "Enter your 2FA code",
+  "2fa_link": "Click here for 2FA installation link",
+  "disable_2fa": "Disable 2-factor authentication",
+  "2fa_qr": "2-factor authentication QR code",
+  "2fa_qr_segue": "or scan this QR code in an authenticator app",
+  "enable_2fa_success": "Successfully enabled 2-factor authentication",
+  "disable_2fa_success": "Successfully disabled 2-factor authentication",
   "jump_to_content": "Jump to content",
   "cant_enable_private_instance_and_federation_together": "Can't enable private instance and federation together",
   "remove_instance": "Remove instance",
