--- a/translations/en.json
+++ b/translations/en.json
@@ -499,6 +499,7 @@
   "site": "Site",
   "software": "Software",
   "version": "Version",
+  "invalid_2fa_code": "Invalid 2FA code: Must be string of six digits",
   "incorrect_2fa_code": "Incorrect 2FA code",
   "enable_2fa": "Enable 2-factor authentication",
   "enter_2fa_code": "Enter your 2FA code",
