fix: Fix invalid property names

--- a/translations/en.json
+++ b/translations/en.json
@@ -499,16 +499,16 @@
   "site": "Site",
   "software": "Software",
   "version": "Version",
-  "invalid_2fa_code": "Invalid 2FA code: Must be string of six digits",
-  "incorrect_2fa_code": "Incorrect 2FA code",
-  "enable_2fa": "Enable 2-factor authentication",
-  "enter_2fa_code": "Enter your 2FA code",
+  "invalid_totp_code": "Invalid 2FA code: Must be string of six digits",
+  "incorrect_totp_code": "Incorrect 2FA code",
+  "enable_totp": "Enable 2-factor authentication",
+  "enter_totp_code": "Enter your 2FA code",
   "2fa_link": "Click here for 2FA installation link",
-  "disable_2fa": "Disable 2-factor authentication",
-  "2fa_qr": "2-factor authentication QR code",
-  "2fa_qr_segue": "or scan this QR code in an authenticator app",
-  "enable_2fa_success": "Successfully enabled 2-factor authentication",
-  "disable_2fa_success": "Successfully disabled 2-factor authentication",
+  "disable_totp": "Disable 2-factor authentication",
+  "totp_qr": "2-factor authentication QR code",
+  "totp_qr_segue": "or scan this QR code in an authenticator app",
+  "enable_totp_success": "Successfully enabled 2-factor authentication",
+  "disable_totp_success": "Successfully disabled 2-factor authentication",
   "jump_to_content": "Jump to content",
   "cant_enable_private_instance_and_federation_together": "Can't enable private instance and federation together",
   "remove_instance": "Remove instance",
