Adding federation desc.

--- a/translations/en.json
+++ b/translations/en.json
@@ -10,6 +10,10 @@
   "open_source_desc": "Lemmy is and will always remain free, <1>open source</1> software, using the strong <2>copyleft</2> <3>AGPL License</3>.",
   "blazing_fast": "Blazing Fast",
   "blazing_fast_desc": "Made using some of the fastest frameworks and tools, including <1>Rust</1>, <2>Actix</2>, <3>Diesel</3>, <4>Inferno</4>, and <5>Typescript</5>.",
+  "censorship_resistant": "Censorship resistant",
+  "censorship_resistant_desc": "By hosting your own server, you can be in full control of your content.",
+  "federation": "Federation",
+  "federation_desc": "Lemmy servers can connect to each other in a web of trust, sharing posts, comments, and communities.",
   "mod_tools": "Powerful Mod Tools",
   "mod_tools_desc": "Each server can set its own moderation policy, to help foster a healthy environment where all can feel comfortable contributing.",
   "create_discussion_platform": "Create your own discussion platform",
