--- a/translations/en.json
+++ b/translations/en.json
@@ -1,6 +1,7 @@
 {
   "lemmy_title": "Lemmy - A link aggregator for the fediverse",
   "join_a_server": "Join a Server",
+  "join": "Join",
   "run_a_server": "Run a Server",
   "lemmy": "Lemmy",
   "lemmy_desc": "A link aggregator for the fediverse.",
@@ -16,11 +17,11 @@
   "federation_desc": "Lemmy servers can connect to each other in a web of trust, sharing posts, comments, and communities.",
   "mod_tools": "Powerful Mod Tools",
   "mod_tools_desc": "Each server can set its own moderation policy, to help foster a healthy environment where all can feel comfortable contributing.",
-  "create_discussion_platform": "Create your own discussion platform",
+  "create_discussion_platform": "Create <1>Your own</1> discussion platform",
   "create_discussion_platform_desc": "With Lemmy, you can <1>easily host your own server</1>, and all these servers are <2>federated</2> (think email), and connected to the same universe, called the <3>Fediverse</3>. For a link aggregator, this means that someone registered on one server can subscribe to communities elsewhere, and can have discussions with people on a completely different server.",
   "live_updates": "Live Updates",
   "live_updates_desc": "New comments and posts stream in to your front page and inbox; No more page refreshes required.",
-  "more_features": "More Features",
+  "more_features": "More <1>Features</1>",
   "self_hostable": "Self hostable, easy to deploy, via <1>Docker</1>, or <2>Ansible</2>.",
   "clean_interface": "Clean, mobile-friendly interface.",
   "avatar_support": "User avatar support.",
@@ -37,18 +38,18 @@
   "support_donate": "Support / Donate",
   "mobile_apps_for_ios_and_android": "Mobile apps for iOS and Android.",
   "apps_title": "Lemmy - Apps and Libraries",
-  "lemmy_apps": "Lemmy Apps",
+  "lemmy_apps": "Lemmy <1>Apps</1>",
   "choose_from_apps": "Choose from any of the apps below.",
   "web_apps": "Web Apps",
   "cli_apps": "CLI/TUI Apps",
   "api_libraries": "API Libraries",
   "contact_title": "Lemmy - Contact",
-  "contact": "Contact Us",
+  "contact": "Contact",
+  "contact_us": "Contact <1>Us</1>",
   "donate_desc": "Lemmy is free, open-source software, meaning no advertising, monetizing, or venture capital, ever. <1>Your donations</1> directly support full-time development of the project.",
-  "support_on_liberapay": "Support on Liberapay",
-  "support_on_patreon": "Support on Patreon",
-  "support_on_opencollective": "Support on OpenCollective",
-  "footer_desc": "Made with <1>Inferno</1> and <2>Chota</2>",
+  "support_on_liberapay": "Support on <1>Liberapay</1>",
+  "support_on_patreon": "Support on <1>Patreon</1>",
+  "support_on_opencollective": "Support on <1>OpenCollective</1>",
   "apps": "Apps",
   "sponsors": "Sponsors",
   "support": "Support",
@@ -57,7 +58,7 @@
   "code_of_conduct": "Code of Conduct",
   "coc": "CoC",
   "join_title": "Lemmy - Browse servers",
-  "lemmy_servers": "Lemmy servers",
+  "lemmy_servers": "Lemmy <1>Servers</1>",
   "browse_instance": "Browse",
   "support_title": "Lemmy - Support",
   "donate_to_lemmy": "Donate to Lemmy",
@@ -65,7 +66,7 @@
   "gold_sponsors_desc": "Gold Sponsors are those that pledged $100 monthly to Lemmy.",
   "silver_sponsors_desc": "Silver Sponsors are those that pledged $40 monthly to Lemmy.",
   "general_sponsors_desc": "General Sponsors are those that pledged $10 to $39 monthly to Lemmy.",
-  "support_lemmy": "Support Lemmy",
+  "support_lemmy": "Support <1>Lemmy</1>",
   "contributers": "Contributors",
   "thanks_translators": "A special thanks to our translators: ",
   "thanks_coders": "A special thanks to our coders: ",
