Separate mobile apps.

--- a/translations/en.json
+++ b/translations/en.json
@@ -38,7 +38,8 @@
   "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
   "nsfw_support": "NSFW post / community support.",
   "support_donate": "Support / Donate",
-  "mobile_apps_for_ios_and_android": "Mobile apps for iOS and Android.",
+  "mobile_apps_for_android": "Mobile apps for Android.",
+  "mobile_apps_for_ios": "Mobile apps for iOS.",
   "apps_title": "Lemmy - Apps and Libraries",
   "lemmy_apps": "Lemmy <1>Apps</1>",
   "choose_from_apps": "Choose from any of the apps below.",
