--- a/translations/en.json
+++ b/translations/en.json
@@ -34,6 +34,19 @@
   "integrated_image_uploading": "Integrated image uploading in both posts and comments.",
   "notifications_including": "Notifications, including via email.",
   "i18n_support": "<1>i18n / internationalization support for > 30 languages.</1>",
+  "all_languages": "All languages",
+  "all_topics": "All topics",
+  "topic": "Topic",
+  "interests": "Interests",
+  "languages": "Languages",
+
+  "what_topic": "What topic are you most interested in?",
+  "what_language": "What language do you speak?",
+  "random": "Random",
+  "most_active": "Most active",
+  "least_active": "Least active",
+  "sports": "Sports",
+  "tech": "Tech",
   "rss_feeds": "RSS / Atom feeds for <1>All</1>, <2>Subscribed</2>, <3>Inbox</3>, <4>User</4>, and <5>Community</5>.",
   "can_fully_erase": "Can fully erase your data, replacing all posts and comments.",
   "nsfw_support": "NSFW post / community support.",
