--- a/translations/en.json
+++ b/translations/en.json
@@ -1,6 +1,7 @@
 {
   "lemmy_title": "Lemmy - A link aggregator for the fediverse",
   "join_a_server": "Join a Server",
+  "see_all_servers": "See All Servers",
   "join": "Join",
   "run_a_server": "Run a Server",
   "lemmy": "Lemmy",
